--- a/lazy_aws_lambda_config.yaml
+++ b/lazy_aws_lambda_config.yaml
@@ -14,8 +14,8 @@ role: get_slackid_kotid_role #  AWSLambdaFullAccess
 
 # if access key and secret are left blank, boto will use the credentials
 # defined in the [default] section of ~/.aws/credentials.
-aws_access_key_id: AKIA2LGNYPAXPQQKE3G2
-aws_secret_access_key: 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
+aws_access_key_id: 
+aws_secret_access_key: 
 
 # dist_directory: dist
 # timeout: 15
